# JakesDadAIMonorepo

./: .gitignore  .turboignore  CLAUDE.md  README.md  TURBOREPO.md  package-lock.json  package.json  tsconfig.json  turbo.json
.claude/: AI_WORKFLOW.md  BMAD_WORKFLOW.md  mcp.json  settings.local.json
.claude/agents/: architect.md  build.md  debug.md  design.md  plan.md  review.md
.claude/resources/: database-schema.md  design-system.md  design-tokens.md  league-info.md  technical-standards.md  ui-ux-guidelines.md
.claude/skills/feature-flow/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/quick-fix/: SKILL.md
.github/workflows/: deploy.yml
apps/mockups/: index.html  package.json
apps/mockups/src/: App.tsx  main.tsx
apps/mockups/src/data/: mockData.ts
apps/web/: LICENSE  README.md  index.html  package.json  playwright.config.ts  vercel.json
apps/web/e2e/: README.md
apps/web/e2e/fixtures/: base.fixture.ts
apps/web/e2e/page-objects/: BasePage.ts  HomePage.ts  NavigationPage.ts  index.ts
apps/web/playwright-report/: index.html
apps/web/src/: App.css  App.tsx  index.css  main.tsx
apps/web/src/components/: ArtifactCard.tsx  EraSelector.tsx  GoatsAndWoats.tsx  HallOfFame.tsx  HardwareGraphs.tsx  HeadToHeadExplorer.tsx  LeagueTimeline.tsx  Navigation.tsx  (+5 more)
scripts/: README.md  pyproject.toml
scripts/src/jakes_dad_scripts/: __init__.py  sync_league_data.py  update_player_stats.py
supabase/: README.md  config.toml  seed.sql
supabase/migrations/: 20251219204545_remote_schema.sql
(+40 files in other folders)
